gitops/httpbingo/httpbing-gtw.haproxy.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: haproxy-prod-gateway-ezparking
  namespace: gateway-infra
  labels:
    # CRITICAL: Must match the labelSelector in the controller
    infra-tier: "ezparking-gateway" 
spec:
  gatewayClassName: haproxy-ezparking
  listeners:
  - name: https
    protocol: HTTP # Correct: ACM terminates TLS at the NLB edge; traffic arrives here as plain HTTP
    port: 443 
    hostname: "*.ezparking.us"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: "haproxy-prod-gateway"
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.ezparking.us"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: "haproxy-prod-gateway"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbingo-gateway-route
  namespace: httpbingo
spec:
  parentRefs:
  - name: haproxy-prod-gateway-ezparking
    namespace: gateway-infra
    sectionName: https
  hostnames:
  - "httpbingo.ezparking.us"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: httpbingo
        namespace: httpbingo
        port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-httpbingo-http-to-https-redirect
  namespace: httpbingo
spec:
  parentRefs:
  - name: haproxy-prod-gateway-ezparking
    namespace: gateway-infra
    sectionName: http # <-- Only targets the plain HTTP port 8000 listener
  hostnames:
  - "httpbingo.ezparking.us" # Can be a wildcard to upgrade all subdomains globally
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https   # Upgrades the scheme to https
        statusCode: 301 # Permanent redirect

# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: ReferenceGrant
# metadata:
#   name: allow-gateway-to-httobingo
#   namespace: haproxy-system  # <-- MUST be deployed in the target service's namespace
# spec:
#   from:
#     - group: gateway.networking.k8s.io
#       kind: HTTPRoute
#       namespace: haproxy-system # <-- Replace with the namespace where your HTTPRoute lives
#   to:
#     - group: "" # Empty string denotes core Kubernetes API group
#       kind: Service
#       name: httpbingo
