gitops/httpbingo/httpbingo-ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbingo-ingress-alb
  namespace: httpbingo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:722249351142:certificate/e19f1d72-44f4-4dea-aba9-cd251fccf404
    alb.ingress.kubernetes.io/group.name: rancher-group
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  ingressClassName: alb
  rules:
    - host: httpbingo.itsnotrocketscience.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbingo
                port:
                  number: 80
  tls:
    - hosts:
        - httpbingo.itsnotrocketscience.tech
