gitops/httpbingo/httpbingo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbingo-ingress
  namespace: httpbingo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Since TLS ends at NLB
spec:
  ingressClassName: nginx
  rules:
  - host: httpbingo.ezparking.us
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbingo
            port:
              number: 80
